--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ table {
   font-weight: 700;
   src: url("https://cdn4.tnwcdn.com/assets/fonts/tnw-avalon/tnw-avalon-bold.woff") format("woff"), url("https://cdn4.tnwcdn.com/assets/fonts/tnw-avalon/tnw-avalon-bold.woff2") format("woff2");
 }
+@font-face {
+  font-family: "Shentox";
+  src: url("./fonts/FontsFree-Net-Shentox2.ttf");
+}
 /* mixins */
 /* Custom */
 html {
@@ -92,6 +96,10 @@ nav {
   box-shadow: 0 1px 55px -15px rgba(0, 0, 0, 0.3);
 }
 
+nav ul {
+  display: none;
+}
+
 .nav-wrapper {
   display: flex;
   height: inherit;
@@ -117,6 +125,45 @@ nav img {
   width: 4rem;
 }
 
+@media screen and (min-width: 1024px) {
+  nav {
+    height: 3rem;
+    background-color: #f7f8f8;
+  }
+
+  .nav-btn {
+    display: none;
+  }
+
+  .nav-wrapper {
+    width: auto;
+    justify-content: center;
+  }
+
+  nav img {
+    margin-left: 1rem;
+    margin-right: auto;
+  }
+
+  nav ul {
+    flex: 1;
+    height: 100%;
+    padding: 0;
+  }
+  nav ul li {
+    display: inline-flex;
+    align-items: center;
+    height: 100%;
+    padding: 0 0.8rem;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    color: #505666;
+  }
+  nav ul li:first-child {
+    background-color: white;
+    color: black;
+  }
+}
 /* Main */
 .grid-section {
   display: none;
@@ -168,12 +215,257 @@ main h2 {
   background-size: cover;
 }
 
+@media screen and (min-width: 770px) and (max-width: 1024px) {
+  .mobile {
+    display: none;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  .logo {
+    width: 20rem;
+  }
+
+  .grid-section {
+    display: block;
+    height: 100vh;
+    padding: 0 4rem;
+  }
+  .grid-section .grid {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    column-gap: 0.5rem;
+    row-gap: 0.5rem;
+  }
+  .grid-section .grid .grid-item {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  .grid-section .grid .grid-item:nth-child(1) {
+    grid-column: span 4;
+    grid-row: span 2;
+  }
+
+  .grid-item a {
+    box-shadow: 0 -3rem 3.5rem black inset;
+    filter: brightness(90%);
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  .grid-item:nth-child(1) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Ftrump_2022-01-10-101926_jsnr.jpeg&signature=e3e255c21f39070d2da56f035737a911") 50% 50% no-repeat;
+    background-size: cover;
+  }
+
+  .grid-item:nth-child(2) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Ftony.jpeg&signature=186de2217c1ecd428e0f0e51556633b8") 60% 0 no-repeat;
+    background-size: cover;
+  }
+
+  .grid-item:nth-child(3) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fcompanies%2Fhome-header_advert-tnw2021-03.jpg&signature=5666d931fff7b6ec7496f08886c9fde0") 50% 0 no-repeat;
+    background-size: 120% 100%;
+    filter: blur(1px);
+  }
+  .grid-item:nth-child(3) a p {
+    padding: 2rem 2rem 0 2rem;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+    font-family: "TNW Avalon", sans-serif;
+    color: white;
+  }
+  .grid-item:nth-child(3) a button {
+    width: 8.5rem;
+    height: 1.7rem;
+    border: 1px solid white;
+    border-radius: 30px;
+    font-weight: 600;
+    color: white;
+    background-color: transparent;
+  }
+
+  .grid-item:nth-child(4) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Fmetaverse.jpeg&signature=5238ad0db5165144458a6052ac08d64f") 62% 0 no-repeat;
+    background-size: cover;
+  }
+
+  .grid-item:nth-child(5) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Fcryptoland.jpeg&signature=d178f15852f1ec0886b2fd0c4e693b9e") 60% 0 no-repeat;
+    background-size: cover;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .mobile {
+    display: none;
+  }
+
+  nav ul {
+    display: block;
+  }
+
+  .logo {
+    float: left;
+    width: 12rem;
+    padding-left: 2rem;
+    padding-top: 4rem;
+    margin: 0;
+  }
+
+  .logo-h2 {
+    float: right;
+    padding-right: 2rem;
+    padding-top: 4rem;
+    font-size: 2rem;
+    color: #505666;
+  }
+
+  .grid-section {
+    display: block;
+    height: 50rem;
+    padding: 0 2rem 0 2rem;
+  }
+  .grid-section .grid {
+    display: grid;
+    height: 80%;
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    column-gap: 0.5rem;
+    row-gap: 0.5rem;
+  }
+  .grid-section .grid-item:nth-child(1) {
+    grid-column: span 2;
+    grid-row: span 3;
+  }
+  .grid-section .grid-item:nth-child(1) p {
+    font-size: 2rem;
+  }
+  .grid-section .grid-item:nth-child(2) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .grid-section .grid-item:nth-child(3) {
+    grid-area: 4/1/6/3;
+  }
+  .grid-section .grid-item:nth-child(4) {
+    grid-column: 4/5;
+    grid-row: 1/3;
+  }
+  .grid-section .grid-item:nth-child(5) {
+    grid-area: 3/3/6/5;
+  }
+  .grid-section .grid-item:nth-child(5) p {
+    font-size: 2rem;
+  }
+  .grid-section .grid-item a {
+    box-shadow: 0 -3rem 3.5rem black inset;
+    filter: brightness(90%);
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .grid-section .grid-item:nth-child(1) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Ftrump_2022-01-10-101926_jsnr.jpeg&signature=e3e255c21f39070d2da56f035737a911") 50% 50% no-repeat;
+    background-size: cover;
+  }
+  .grid-section .grid-item:nth-child(2) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Ftony.jpeg&signature=186de2217c1ecd428e0f0e51556633b8") 60% 0 no-repeat;
+    background-size: cover;
+  }
+  .grid-section .grid-item:nth-child(3) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fcompanies%2Fhome-header_advert-tnw2021-03.jpg&signature=5666d931fff7b6ec7496f08886c9fde0") 50% 0 no-repeat;
+    background-size: 120% 100%;
+    filter: blur(1px);
+  }
+  .grid-section .grid-item:nth-child(3) a p {
+    padding: 4rem 2rem 0 2rem;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+    font-family: "TNW Avalon", sans-serif;
+    color: white;
+  }
+  .grid-section .grid-item:nth-child(3) a button {
+    width: 8.7rem;
+    height: 3rem;
+    border: 1px solid white;
+    border-radius: 30px;
+    font-weight: 600;
+    color: white;
+    background-color: transparent;
+  }
+  .grid-section .grid-item:nth-child(4) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Fmetaverse.jpeg&signature=5238ad0db5165144458a6052ac08d64f") 62% 0 no-repeat;
+    background-size: cover;
+  }
+  .grid-section .grid-item:nth-child(5) a {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Fcryptoland.jpeg&signature=d178f15852f1ec0886b2fd0c4e693b9e") 60% 0 no-repeat;
+    background-size: cover;
+  }
+
+  .grid {
+    padding-top: 4rem;
+    grid-template-rows: repeat(5, 1fr);
+  }
+}
+.mobile-sec-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  width: inherit;
+  height: inherit;
+  padding-left: 1rem;
+  text-align: left;
+  color: white;
+  white-space: normal;
+}
+.mobile-sec-wrap span {
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+  font-size: 0.8rem;
+  font-family: "Shentox", sans-serif;
+}
+.mobile-sec-wrap p {
+  margin-bottom: 1rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
 .tickets {
   height: 14rem;
   margin: 0.3rem 0.3rem 0 0.3rem;
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fcompanies%2Fhome-header_advert-tnw2021-03.jpg&signature=5666d931fff7b6ec7496f08886c9fde0") 50% 0 no-repeat;
   background-size: 200% 180%;
   filter: blur(1px);
+}
+.tickets p {
+  padding-top: 4rem;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+  font-family: "TNW Avalon", sans-serif;
+  color: white;
+}
+.tickets button {
+  width: 8.5rem;
+  height: 3rem;
+  border: 1px solid white;
+  border-radius: 30px;
+  font-weight: 600;
+  color: white;
+  background-color: transparent;
 }
 
 /* Popular articles */
@@ -190,6 +482,20 @@ main h2 {
   color: #a7aab2;
 }
 
+@media screen and (min-width: 770px) and (max-width: 1024px) {
+  .pop-articles {
+    padding: 3.5rem 5rem 0 5rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .pop-articles ul {
+    display: flex;
+    padding: 0 2rem 5rem 2rem;
+  }
+  .pop-articles ul li {
+    margin-right: 1rem;
+  }
+}
 ul {
   counter-reset: a;
   min-height: fit-content;
@@ -287,42 +593,42 @@ ul {
   height: 22vw;
 }
 
-.latest-stories a:nth-child(2) div {
+.story-wrap a:nth-child(1) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FUntitled-design-4.jpg&signature=0933dd0ad405e17be8779daaa43e51dc") 50% 0 no-repeat;
   background-size: cover;
 }
 
-.latest-stories a:nth-child(3) div {
+.story-wrap a:nth-child(2) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2Fheader-image-Apple-cloth-2.jpg&signature=59c590f3f84038a3753261663e2abfe0") 50% 0 no-repeat;
   background-size: cover;
 }
 
-.latest-stories a:nth-child(4) div {
+.story-wrap a:nth-child(3) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FUntitled-design-45-5.jpg&signature=2eda991c814869391cb9247577e2bd16") 50% 0 no-repeat;
   background-size: cover;
 }
 
-.latest-stories a:nth-child(5) div {
+.story-wrap a:nth-child(4) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FSmall-phone-q.jpg&signature=cf663f74d7693bc82eec9c72a80686ae") 50% 0 no-repeat;
   background-size: cover;
 }
 
-.latest-stories a:nth-child(6) div {
+.story-wrap a:nth-child(5) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FUntitled-design-45-4.jpg&signature=7267f73990fa6e80295b66d691116808") 50% 0 no-repeat;
   background-size: cover;
 }
 
-.latest-stories a:nth-child(7) div {
+.story-wrap a:nth-child(6) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FThe-Markup-Vista-Equity-Partners-Children-data-hed.jpg&signature=a30fc5f62d7f57b9ac85ec016baf2776") 50% 0 no-repeat;
   background-size: cover;
 }
 
-.latest-stories a:nth-child(8) div {
+.story-wrap a:nth-child(7) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FSpotify-Hifi.jpg&signature=fc522e500eda1a96704cdd897c72766e") 50% 0 no-repeat;
   background-size: cover;
 }
 
-.latest-stories a:nth-child(9) div {
+.story-wrap a:nth-child(8) div {
   background: url("https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2021%2F07%2Ftimecrystals-1.jpg&signature=95d91b02a1449889a4135191c950da43") 50% 0 no-repeat;
   background-size: cover;
 }
@@ -340,6 +646,73 @@ ul {
   font-size: 0.9rem;
 }
 
+@media screen and (min-width: 770px) and (max-width: 1024px) {
+  .latest-stories {
+    padding: 0 4rem 0 4rem;
+  }
+  .latest-stories h2 {
+    font-size: 2.6rem;
+    float: left;
+  }
+  .latest-stories .story-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    clear: left;
+  }
+  .latest-stories .story-wrap a {
+    flex: 1 1 50%;
+  }
+  .latest-stories .story-wrap a .story {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .latest-stories .story-wrap a .story .story-img {
+    width: 100%;
+    height: 40%;
+  }
+  .latest-stories .story-wrap a .story .span-wrap {
+    margin: 0;
+    margin-top: 1rem;
+  }
+  .latest-stories .story-wrap a:nth-child(odd) .story {
+    margin-right: 1.5rem;
+  }
+  .latest-stories .all-news-btn {
+    width: 8rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .story-wrap {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .story-wrap a {
+    flex: 1 1 20%;
+    margin-right: 2rem;
+  }
+  .story-wrap a .story {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100%;
+  }
+  .story-wrap a .story .story-img {
+    width: 100%;
+    flex-basis: 13vw;
+  }
+  .story-wrap a .story .span-wrap {
+    margin: 0;
+    margin-top: 1rem;
+  }
+  .story-wrap a:nth-child(4n) {
+    margin-right: 0;
+  }
+
+  .all-news-btn {
+    width: 8rem;
+  }
+}
 /* Channels */
 .channels {
   padding: 4.5rem 0 5rem 1rem;
@@ -470,6 +843,332 @@ form button {
   font-weight: 600;
   background-color: #cc0099;
   color: white;
+}
+
+/* Videos */
+.videos {
+  padding-bottom: 5rem;
+  background-color: #f7f8f8;
+}
+
+.videos h2 {
+  padding-top: 4rem;
+  font-family: "TNW Avalon", sans-serif;
+  font-size: 1.7rem;
+  color: black;
+}
+
+iframe {
+  width: 100%;
+  height: 60vw;
+}
+
+.main-video figcaption {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  height: 3.1rem;
+  margin-top: -5px;
+  padding: 1.2rem;
+  text-align: left;
+  font-size: 1.1rem;
+  font-weight: 600;
+  background-color: black;
+  color: white;
+}
+.main-video figcaption time {
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+  font-weight: 100;
+  color: #a7aab2;
+}
+
+.video-scroll {
+  display: flex;
+  padding-left: 1.5rem;
+  margin-top: 1.2rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+.video-scroll .video-small {
+  width: 13rem;
+  margin-right: 1rem;
+  flex: 1 0 auto;
+}
+.video-scroll .video-small img {
+  width: inherit;
+  height: 9rem;
+}
+.video-scroll .video-small figcaption {
+  padding-bottom: 2rem;
+  font-size: 0.95rem;
+  font-weight: 600;
+  text-align: left;
+  line-height: 1.4rem;
+  color: black;
+}
+.video-scroll .video-small .video-small:last-child {
+  margin: 0;
+}
+
+@media screen and (min-width: 770px) {
+  .videos h2 {
+    float: left;
+    font-size: 2.5rem;
+    padding-left: 4rem;
+  }
+
+  .video-wrap {
+    display: flex;
+    justify-content: space-between;
+    clear: left;
+    padding: 0 4rem;
+    height: 30rem;
+  }
+  .video-wrap .main-video {
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+  }
+  .video-wrap .main-video iframe {
+    height: 35vw;
+  }
+  .video-wrap .main-video figcaption {
+    flex: 1;
+    line-height: 1.4rem;
+  }
+  .video-wrap .video-scroll {
+    flex-direction: column;
+    flex: 1.5;
+    overflow-y: scroll;
+    margin-top: 0;
+    box-shadow: 5rem 5rem 3rem white inset;
+  }
+  .video-wrap .video-scroll .video-small {
+    width: 100%;
+    margin: 0;
+  }
+  .video-wrap .video-scroll .video-small img {
+    height: 11rem;
+  }
+  .video-wrap .video-scroll .video-small figcaption {
+    padding-bottom: 1.5rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .video-wrap {
+    padding: 0 2rem;
+  }
+  .video-wrap .main-video {
+    flex: 3;
+  }
+}
+/* Get in touch */
+.get-in-touch {
+  padding: 0 1.5rem 2.5rem 1.5rem;
+}
+.get-in-touch h3 {
+  padding-top: 6rem;
+  margin-bottom: 1rem;
+  font-family: Shentox, sans-serif;
+  font-size: 1rem;
+  letter-spacing: 0.01rem;
+  color: #cd0099;
+}
+.get-in-touch h2 {
+  margin-bottom: 1.5rem;
+  font-size: 1.8rem;
+  font-family: "TNW Avalon", sans-serif;
+  color: black;
+}
+.get-in-touch p {
+  margin-bottom: 2rem;
+  font-size: 1.15rem;
+  line-height: 1.8rem;
+  color: #505666;
+}
+.get-in-touch button {
+  width: 9rem;
+  height: 3rem;
+  margin-bottom: 4rem;
+  border: 0;
+  border-radius: 4px;
+  font-size: 0.85rem;
+  font-weight: 600;
+  font-family: "Shentox", sans-serif;
+  text-transform: uppercase;
+  background-color: #00cccc;
+  color: white;
+}
+
+.color-imgs {
+  display: flex;
+  flex-wrap: wrap;
+}
+.color-imgs div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  flex: 1 0 50%;
+}
+.color-imgs img {
+  width: 6rem;
+  height: 6rem;
+  margin-bottom: 1rem;
+}
+.color-imgs span {
+  font-weight: 600;
+}
+
+.gray-imgs {
+  display: flex;
+  flex-wrap: wrap;
+}
+.gray-imgs div {
+  flex: 1 0 50%;
+}
+.gray-imgs div img {
+  width: 10rem;
+  opacity: 0.5;
+}
+
+@media screen and (min-width: 770px) {
+  .get-in-touch {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4rem 2.5rem 4rem;
+  }
+  .get-in-touch h2 {
+    font-size: 2.8rem;
+  }
+
+  .git-wrap {
+    flex: 1;
+    text-align: left;
+  }
+
+  .color-imgs {
+    flex: 1;
+    padding-top: 7rem;
+  }
+
+  .gray-imgs div {
+    flex-basis: 33%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .get-in-touch {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr auto;
+    padding: 0 2rem 2.5rem 2rem;
+  }
+
+  .gray-imgs {
+    grid-column: span 2;
+  }
+  .gray-imgs div {
+    flex: 1 1 auto;
+  }
+  .gray-imgs div img {
+    width: 7rem;
+  }
+}
+/* Footer */
+footer {
+  background-color: black;
+}
+footer span {
+  display: block;
+  padding: 2rem 2rem 5rem 2rem;
+  line-height: 1.4rem;
+  color: #505666;
+}
+footer em {
+  color: white;
+}
+
+.footer-main {
+  padding: 4rem 1.5rem 2rem 1.5rem;
+}
+.footer-main img {
+  width: 11rem;
+  float: left;
+}
+.footer-main h3 {
+  margin-top: 1.5rem;
+  clear: left;
+  float: left;
+  font-size: 1.4rem;
+  color: white;
+}
+.footer-main h4 {
+  font-size: 1.4rem;
+  font-family: "Trump Soft Pro", sans-serif;
+  color: white;
+}
+.footer-main a {
+  color: #00cccc;
+}
+
+@media screen and (min-width: 770px) {
+  .footer-main {
+    padding: 4rem 3.7rem 2rem 3.7rem;
+  }
+}
+.socials {
+  height: 3rem;
+  clear: left;
+}
+
+.footer-nav {
+  display: flex;
+}
+.footer-nav ul {
+  padding: 0;
+}
+.footer-nav a {
+  font-size: 110%;
+}
+.footer-nav * {
+  margin-bottom: 0.8rem;
+}
+
+.footer-left, .footer-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1 1 50%;
+}
+.footer-left li, .footer-right li {
+  text-align: left;
+}
+
+hr {
+  color: gray;
+}
+
+@media screen and (min-width: 1024px) {
+  .footer-main {
+    display: flex;
+    justify-content: space-between;
+    padding: 4rem 9rem 0 1.5rem;
+  }
+  .footer-main .footer-left {
+    position: relative;
+    right: 15vw;
+  }
+
+  footer span {
+    padding: 2rem 2rem 2rem 2rem;
+  }
+
+  hr {
+    margin: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
